src/css/style.css
* {
    margin: 0;
    padding: 0;
    text-decoration: none;
    list-style: none;
    font-family: 'Skranji', cursive;
    color: #ffffff;
    scroll-behavior: smooth;
}
*,*:before,*:after{
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-sizing: border-box;
}
input:focus{
    outline: 0;
    box-shadow: 0 0 10px #ffffff;
}
input{
    border: 0px;
}
button{
    border: 0px;
}
body{
    background-color: #000000;
    color: #ffebcd;
}
a{
    color: #000000;
}
header{
    top: 0;
    position: fixed;
    height: fit-content;
    z-index: 10;
}
.container{
    width: 100vw;
    height: 100vh;
}
.container-login-form {
    width: 580px;
    height: 600px;
    position: relative;
    margin: 0 auto;
}
.login-form {
    justify-content: center;
    display: block;
}
.login-form li label{
    display: block;
    text-align: center;
    width: 110px;
    height: 100px;
    transform-origin: 0 0;
    transform: rotate(-90deg);
    position: relative;
    left: -70px;
    top: 290px;
    padding: 10px;
    background-color: #4a4800e6;
    font-size: 1.7em;
    border-radius: 20%;
    cursor: pointer;
}
.sign-form {
    display:none;
    position:absolute;
    left: 0;
    top: 40px;
    border-radius: 195px;
    padding:10px;
    height: 520px;
    width: 525px;
    box-shadow:0px 0px 5px 0px #808080;
    z-index: 1;
    background-image: url("http://localhost:4200/img/formFon.jpg");
    background-size: cover;
}
#singup-form{
    height: 620px;
    padding-top: 5%;
}
.login-form__background{
    object-fit: cover;
    height: 519px;
    width: 515px;
    border-radius: 195px;
}
.login-form__img{
    position: absolute;
    margin-right: 10px;
    left: 0;    
    margin-bottom: 10px;
    top: 0;
    z-index: 1;
}
.sign-form input {
    background: #37361ef8;
    color: #ffffff;
    box-shadow: 10px 12px 5px #252515d7;
    width: 300px;
    height: 70px;
    margin-bottom: 20px;
    padding-left: 20px;
    border-radius: 20px;
    z-index: 3;
    margin: 5px auto;
}
.sign-form input::placeholder {
    color: #ffffff;
}
.login-form input[type=radio] {
    -webkit-appearance:none;
}
.login-form input[type=radio]:checked ~ .sign-form {
    display:flex;
    flex-direction: column;
    text-align: center;
    justify-content: center;
}
input:hover, input:focus{
    background-color: #ecddb5ec;
    box-shadow: 0 0 10px #ffffff;
    color: #37361e;
    cursor: pointer;
}
.login-form button {
    background-color: #ecddb5f7;
    color: #000000;
    box-shadow: 0 0 5px #aaa084d8;
    height: 120px;
    width: 100px;
    border-radius: 40%;
    font-size: 1.5em;
    box-sizing: border-box;
    margin: 10px auto;
    z-index: 3;
}
button:hover{
    background-color: #f5e7c0f3;
    box-shadow: 0 0 10px #ffffff;
    cursor: pointer;
    
}
.modal-icon{
    display: flex;
    justify-content: center;
    position: absolute;
    z-index: 5;
    width: 100vw;
    height: 100vh;
    margin-top: 60px;
}
.preview{
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 100vw;
    height: 100vh;
}
.preview__gif{
    width: 50vw;
    height: 50vh;
    object-fit: scale-down;
    cursor: pointer;
}
::-webkit-scrollbar {
    width: 0px;
    background: transparent;
}
.main-area{
    height: 100vh;
    margin-top: 127px;
}
.main-area__film-word{
    display: flex;
    justify-content: left;
    height: 50px;
    width: 90vw;
    margin: 10vh 0 6vh 7vw;
}
h1{
    color: #CDC6B0;
    text-align: left;
}
.main-area__films-area{
    display: flex;
    justify-content: center;
    flex-wrap:wrap;
    overflow: hidden;
    width: 100vw;
    min-height: 620px;
    color: #CDC6B0;
    padding-left: 20px;
}
.login-form li input:checked~label {
    background-color: #a2a574;
    box-shadow: 0 0 20px #dadada;
}
label:hover {
    box-shadow: 0 0 10px #ffffff;
}
.film-card{
    display: flex;
    justify-content: center;
    width: 250px;
    height: 380px;
    background-color: #9b8d6200;
    margin: 0px 20px 20px 0px;
    border-radius: 45px;
    position: relative;
}
.film-card__poster{
    width: 100%;
    height: 100%;
    border-radius: 45px;
    object-fit: cover;
}
.film-card__title{
    display: flex;
    align-items: center;
    background-color: #0b0a00c9;
    position: absolute;
    align-items: center;
    height: 60px;
    width: 268px;
    border-radius: 40px;
    bottom: 0;
}
.film-card__rate{
    position: absolute;
    font-size: 18px;
    color: #FFFFFF;
    right: 15px;
    top: 50%;
    transform: translateY(-50%);
}
.film-card__title-text{
    display: flex;
    align-items: center;
    text-align: start;
    margin: 10px;
    color: #FFFFFF;
    width: 70%;
    height: 50px;
}
.header-inner{
    display: flex;
    width: 100vw;
    height: 60px;
    background-color: #9B8D62;
}
.logo{
    display: flex;
    margin-left: 6vw;
    
}
.logo__img{
  width: 127px;
  height: 100%;
  border-radius: 0;
}
.logo__text{
    font-size: 50px;
    font-weight: 400;
    min-width: 445px;
    margin-left: 20px;
    letter-spacing: 15px;
    cursor: pointer;
}
.logo__text:hover{
    text-shadow: 0 0 10px #ffffff;
}
a:hover{
    
    color: rgb(32, 32, 32);
}
p{
    color: #000;
}
.header-input{
    width: 255px;
    height: 33px;
    background-color: #5A5339;
    border-radius: 54px;
    border: none;
    text-align: center;
    font-size: 24px;
    cursor: pointer;
}
.navigation{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-left: 15vw;
}
.search__img{
    display: flex;
    position: absolute;
    width: 29px;
    height: 30px;
    cursor: pointer;
}
.header-search{
    display: flex;
    justify-content: flex-end;
    align-items: center;
}
.header-input:disabled{
    opacity: .5;
}
.login__img{
    position: absolute;
    border-radius: 0;
    width: 30px;
    height: 30px;
    cursor: pointer;
}
.login{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    background-color: #5A5339;
    border-radius: 43px;
    margin-left: 15vw;
}
.main-area__pagination{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #9B8D62;
    width: 100vw;
    height: 60px;
}
.main-area__previous, .main-area__next, .search__img, .login__img {
    transition: all 0.8s ease 0s;
    cursor: pointer;
  }
  .main-area__next{
    height: 50px;
    width: 50px;
  }
  .main-area__next:hover{
    position: relative;
    transform: rotate(360deg);
  }
  .main-area__page-info{
      font-size: 40px;
  }
  .search__img:hover, .login__img:hover{
    transform: rotate(360deg);
  }
  .film-conteiner{
    display: flex;
    width: 100vw;
    height: calc(100vh - 60px);
    margin-top: 60px;
}
.main-info{
    width: 70%;
    height: 100%;
    padding: 1% 2%;
    background: #9b8d6280;
    color: #CDC6B0;
}

label:hover{
    box-shadow: none;
}
.reviews{
    width: 30%;
    height: 100%;
    flex-direction: column;
    padding: 1%;
}
.reviews__text{
    display: flex;
    flex-direction: column;
    height: 95%;
    overflow: auto;
}
.reviews__header{
    margin-bottom: 1%;
}
.reviews-content__text{
    margin-bottom: 20px;
    padding-left: 5px;
    border-left: 2px solid #9b8d628c;
}
.homapage{
    color: #9b8d62;
}
.film-deteils >:last-child{
    margin-top: 20px;
}
.reviews-content__text:hover{
    background-color:#9b8d628c;
}
.reviews-content__login{
    margin-left: 25px;
    color: #CDC6B0;
    font-size: 20px;
}
.title-film{
    font-weight: 400;
    font-size: 50px;
    color : #CDC6B0;
}
.main-content{
    display: flex;
    align-items: center;
    width: 100%;
    height: 400px;
    border-radius: 48px;
    margin: 0 10% 5% 0;
}
.main-poster{
    max-width: 60%;
    border-radius: 40px;
    margin-right: 30px;
}
.description{
    font-weight: 400;
    font-size: 20px;
    
}
.main-content__info{
    font-size: 20px;
    color: #CDC6B0;
}
.none {
    display: none;
}
.form-conteiner{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.sign-form__tooltip{
    margin-bottom: 5%;
}
.sign-form__tooltip::before,
.sign-form__tooltip::after {
  --scale: 0;
  --arrow-size: 20px;
  --tooltip-color: #cdc6b0d3;

  position: absolute;
  left: 50%;
  transform: translateX(-50%) translateY(var(--translate-y, 0)) scale(var(--scale));
  transition: 150ms transform;
  transform-origin: bottom center;
}
.sign-form__tooltip::before {
  --translate-y: calc(-100% - var(--arrow-size));

  content: attr(data-tooltip);
  color: white;
  padding: 4px;
  border-radius: 30px;
  text-align: center;
  width: max-content;
  max-width: 100%;
  background: var(--tooltip-color);
}
.sign-form__tooltip:hover::before,
.sign-form__tooltip:hover::after {
  --scale: 1;
}
.sign-form__tooltip::after {
  --translate-y: calc(-1 * var(--arrow-size));
  content: '';
  border: var(--arrow-size) solid transparent;
  border-top-color: var(--tooltip-color);
  transform-origin: top center;
}
.main-area__filter-button{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 40px;
    height: 40px;
    background-color: #5A5339;
    border-radius: 43px;
    margin: 0 0 0 3vw;
}
.main-area__filter-img{
    margin-top: 3px;
    height: 80%;
    width: 80%;
    cursor: pointer;
}
.disabled {
    pointer-events: none;
    cursor: none;
    opacity: 0.5;
}
.current-page-number,
.last-page-number {
    color: #000;
}
.arrow-up{
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    margin-left: 90%;
    right: 10px;
    margin-top: 90%;
    bottom: 100px;
    width: 40px;
    height: 40px;
    background-color: #5A5339;
    border-radius: 43px;
}
.arrow-up__img{
    position: absolute;
    border-radius: 0;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

